Big HTML update

--- a/team.html
+++ b/team.html
@@ -44,13 +44,10 @@
             <a href="./team.html" class="menu__item js-menu__item">Team</a>
           </li>
           <li class="menu__list-item">
-            <a href="./kontakt.html" class="menu__item js-menu__item">Kontakt</a>
+            <a href="./print.html" class="menu__item js-menu__item">Printausgabe</a>
           </li>
           <li class="menu__list-item">
-            <a href="./impressum.html" class="menu__item js-menu__item">Impressum</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="./datenschutz.html" class="menu__item js-menu__item">Datenschutz</a>
+            <a href="./rechtliches.html" class="menu__item js-menu__item">Rechtliches</a>
           </li>
         </ul>
       </nav>
@@ -129,12 +126,12 @@
     </header>
 
     <main>
-      <article class="article article--team" id="felix">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="felix">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Felix</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">Leidenschaftlicher
             Fotograph, begeisterter Kitesurfer – Felix kommt viel
             herum, insbesonders wenn er mit seinem selbstgebauten VW-Bus auf
@@ -143,12 +140,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="michaela">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="michaela">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Michaela</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">Michaela ist unser
             nordischer Ruhepol. Auch wenn die Diskussion mal hitziger
             wird, Michaela behält die Ruhe weg. Sie ist immer freundlich und
@@ -156,36 +153,36 @@
             - auf Michaela kann man zählen.</p>
         </div>
       </article>
-      <article class="article article--team" id="viktoria">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="viktoria">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Viktoria</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">Viktoria eine sleeke
             Designerin. Alles muss minimalistisch und Gelb sein.
             FIKA!
           </p>
         </div>
       </article>
-      <article class="article article--team" id="max">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="max">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Max</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">Seine Devise: Schlicht und
             viel Weißraum. Designtechnisch minimalistisch
             veranlagt, hat er einen großen Teil zum Grundgerüst des Magazins
             beigetragen.</p>
         </div>
       </article>
-      <article class="article article--team" id="jennie">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="jennie">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Jennie</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Elegant, trotzdem zeitgemäß und auf jeden Fall schick mag es
             Jennie.
@@ -201,12 +198,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="julien">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="julien">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Julien</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Julien Schnick ist ein aufstrebender Gestalter aus dem
             Bremerhavener
@@ -215,12 +212,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="jonas">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="jonas">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Jonas</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">Ein waschechter
             Interaction
             Designer: Wenn er ein Interface gestaltet, dann
@@ -229,12 +226,12 @@
             entwickelt, dann stimmt‘s auch ästhetisch.</p>
         </div>
       </article>
-      <article class="article article--team" id="marvin">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="marvin">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Marvin</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Wenn unser Kollege aus Lunestedt nicht gerade am Zocken oder Feiern
             ist, ist er dabei,
@@ -249,12 +246,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="rieke">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="rieke">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Rieke</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Etymologisch leitet sich der Name »Rieke« vom altgriechischen
             »rikos«
@@ -265,12 +262,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="lena">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="lena">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Lena</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Gestatten? Lena. Sie spielt gern Fußball und ist Leadsängerin einer
             Band. Vor dem Studium absolvierte sie bereits eine duale
@@ -278,12 +275,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="sevda">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="sevda">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Sevda</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Eine Löwin, eine Künsterlin, eine Leseratte - Das ist Sevda. Ihr
             heiligster, materieller
@@ -297,12 +294,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="judith">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="judith">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Judith</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Judith Beusing hat vieles zu bieten – Humor, Kreativität, aber vor
             allem: Vielseitigkeit.
@@ -316,12 +313,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="lia">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="lia">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Lia</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Professionelle Fotografin und Surfergirl in einem, bildet Lia den
             Freigeist des Teams.
@@ -334,12 +331,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="nadine">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="nadine">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Nadine</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">Hat Spaß am Schreiben,
             erkundet gerne Lost Places und liebt Abenteuer. Auf
             ihrer To-Do-Liste darf nicht fehlen: Fallschirmspringen und das
@@ -347,23 +344,23 @@
             Man Festival in Nevada. Bad Vibes können ihr gerne fernbleiben.</p>
         </div>
       </article>
-      <article class="article article--team" id="janina">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="janina">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Janina</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">Sie künstlerisch kreativ
             und musikalisch. Das Zeichnen ist ihre Leidenschaft.
             Unser Team bereichert sie mit ihrer Organisationsfähigkeit.</p>
         </div>
       </article>
-      <article class="article article--team" id="axel">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="axel">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Axel</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Als Diplom Grafik Designer und gelernter Drucker zeigte Axel dem
             Team
@@ -376,12 +373,12 @@
           </p>
         </div>
       </article>
-      <article class="article article--team" id="andreas">
-        <header class="article__number-container article__number-container--team">
-          <h1 class="article__title article__title--team js-article__title--team"
+      <article class="article article--subpage" id="andreas">
+        <header class="article__number-container article__number-container--subpage">
+          <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Name des Team-Mitglieds. Anklicken, um Auswahl zu öffnen.">Andreas</h1>
         </header>
-        <div class="article__teaser article__teaser--team">
+        <div class="article__teaser article__teaser--subpage">
           <p class="article__teaser-text team__text">
             Erster Satz über einen kompetenten Professor. Zweiter Satz über
             einen kreativen
