--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
     <div class="menu js-menu">
       <header class="menu__header">
-        <button class="header__hamburger hamburger hamburger--spring js-hamburger" type="button">
+        <button class="header__hamburger hamburger hamburger--spring js-hamburger"
+          type="button">
           <span class="hamburger-box">
             <span class="hamburger-inner"></span>
           </span>
@@ -54,18 +55,16 @@
             <a href="./team.html" class="menu__item js-menu__item">Team</a>
           </li>
           <li class="menu__list-item">
-            <a href="./kontakt.html" class="menu__item js-menu__item">Kontakt</a>
+            <a href="./print.html" class="menu__item js-menu__item">Printausgabe</a>
           </li>
           <li class="menu__list-item">
-            <a href="./impressum.html" class="menu__item js-menu__item">Impressum</a>
-          </li>
-          <li class="menu__list-item">
-            <a href="./datenschutz.html" class="menu__item js-menu__item">Datenschutz</a>
+            <a href="./rechtliches.html" class="menu__item js-menu__item">Rechtliches</a>
           </li>
         </ul>
       </nav>
       <a href="/#" class="menu__item menu__item--logo js-menu__item">
-        <img class="menu__image" src="./src/assets/images/sleak-logo.svg" alt="Start" role="button" tabindex="1">
+        <img class="menu__image" src="./src/assets/images/sleak-logo.svg" alt="Start"
+          role="button" tabindex="1">
       </a>
     </div>
 
@@ -125,7 +124,8 @@
 
     <header class="header">
       <div class="header__inner">
-        <button class="header__hamburger hamburger hamburger--spring js-hamburger" type="button">
+        <button class="header__hamburger hamburger hamburger--spring js-hamburger"
+          type="button">
           <span class="hamburger-box">
             <span class="hamburger-inner"></span>
           </span>
@@ -149,17 +149,13 @@
 
       <footer class="footer">
         <a href="#" class="footer__link" aria-label="Zurück zum Start scrollen">
-          <svg class="footer__logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 262.27 72.48" preserveAspectRatio="xMidYMid">
-            <path class="cls-1" d="M28.74,57.06,18.5,53.7a33.26,33.26,0,0,1-9.32-4.28A7.88,7.88,0,0,1,6,42.63a9.84,9.84,0,0,1,3.71-8.06q3.72-3,10.44-3a13.67,13.67,0,0,1,6.1,1.27,12.07,12.07,0,0,1,4.35,3.5,23.64,23.64,0,0,1,3,5.11,62.14,62.14,0,0,1,2.25,6h1.54v-16H35.89a2.46,2.46,0,0,1-2.25,1.13A6.54,6.54,0,0,1,31,32c-.75-.32-1.59-.65-2.53-1s-2-.65-3.29-1a20.33,20.33,0,0,0-5-.49,22.69,22.69,0,0,0-8,1.4A18.51,18.51,0,0,0,1.55,40.8,17.16,17.16,0,0,0,0,48.09a18.41,18.41,0,0,0,1.33,7.57,14.17,14.17,0,0,0,3.44,4.83,16.35,16.35,0,0,0,4.55,2.95c1.64.7,3.16,1.29,4.56,1.75L24.81,69a21.31,21.31,0,0,1,6.28,3.36H43.68a13.21,13.21,0,0,0-4.15-9.11A29.66,29.66,0,0,0,28.74,57.06Z"
-            />
-            <polygon class="cls-1" points="45.86 0 45.86 1.96 56.65 1.96 56.65 14.51 56.65 16.91 56.65 72.34 68.71 72.34 68.71 16.91 68.71 14.51 68.71 0 45.86 0"
-            />
-            <path class="cls-1" d="M96.36,56.78h43.17a28.62,28.62,0,0,0-2.6-12.89A24.52,24.52,0,0,0,122.15,31a27.79,27.79,0,0,0-20.75,1.34A33.62,33.62,0,0,0,84.65,49.85a30.61,30.61,0,0,0-2.45,12,35.36,35.36,0,0,0,1.51,10.51h13a85,85,0,0,1-.49-9c0-1.5,0-2.73.07-3.71S96.36,57.72,96.36,56.78ZM97.69,46a26.21,26.21,0,0,1,2.73-7.43,14,14,0,0,1,4.91-5.12,14.78,14.78,0,0,1,7.84-1.89,15.47,15.47,0,0,1,5,.78,9,9,0,0,1,3.93,2.58,13,13,0,0,1,2.52,4.91,28.24,28.24,0,0,1,.91,7.85v3.51a26.93,26.93,0,0,1-.28,3.64H96.5A57,57,0,0,1,97.69,46Z"
-            />
-            <path class="cls-1" d="M189.19,35.55a18.66,18.66,0,0,0-7-4.35,31.38,31.38,0,0,0-10.79-1.61,32.44,32.44,0,0,0-9.46,1.26,20.48,20.48,0,0,0-6.87,3.44,14.87,14.87,0,0,0-4.13,5,12.94,12.94,0,0,0-1.41,5.89,7.64,7.64,0,0,0,1.13,4.34c.74,1.13,2.66,1.69,5.74,1.69a5.69,5.69,0,0,0,4.07-1.33,4.39,4.39,0,0,0,1.4-3.3,21.23,21.23,0,0,0-.42-3.43,26.25,26.25,0,0,1-.42-4.7,5.52,5.52,0,0,1,3-5.26,16.17,16.17,0,0,1,7.64-1.61,13.37,13.37,0,0,1,5.61,1,7.09,7.09,0,0,1,3.22,2.87A12.92,12.92,0,0,1,182.05,40a40.44,40.44,0,0,1,.41,6,27.89,27.89,0,0,1-.63,6.66,8.38,8.38,0,0,1-2.31,4.06,13.34,13.34,0,0,1-4.7,2.73c-2,.75-4.55,1.64-7.64,2.67-2.61.84-5.2,1.64-7.77,2.38a33.84,33.84,0,0,0-7,2.88,14.52,14.52,0,0,0-5.12,4.69c-.06.09-.11.19-.16.28h11.41a11.57,11.57,0,0,1,1.23-2.17,15.27,15.27,0,0,1,6.86-5.12l10.51-4.2c2.9-1.22,4.44-2.43,4.63-3.65h.29v14c0,.36,0,.74,0,1.12H194.1V48.93A23.11,23.11,0,0,0,193,41.71,15.66,15.66,0,0,0,189.19,35.55Z"
-            />
-            <path class="cls-1" d="M240.54,31.55v2h10L222.6,57.62h-1.54V.14H198.21v2H209V72.48h12.06V59.58h1.54l10.61,12.9H248.7L232,52.29l21.87-18.78h8.41v-2Zm-4.3,27.89,10.61,12.9h0l-10.61-12.9Z"
-            />
+          <svg class="footer__logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 262.27 72.48"
+            preserveAspectRatio="xMidYMid">
+            <path class="cls-1" d="M28.74,57.06,18.5,53.7a33.26,33.26,0,0,1-9.32-4.28A7.88,7.88,0,0,1,6,42.63a9.84,9.84,0,0,1,3.71-8.06q3.72-3,10.44-3a13.67,13.67,0,0,1,6.1,1.27,12.07,12.07,0,0,1,4.35,3.5,23.64,23.64,0,0,1,3,5.11,62.14,62.14,0,0,1,2.25,6h1.54v-16H35.89a2.46,2.46,0,0,1-2.25,1.13A6.54,6.54,0,0,1,31,32c-.75-.32-1.59-.65-2.53-1s-2-.65-3.29-1a20.33,20.33,0,0,0-5-.49,22.69,22.69,0,0,0-8,1.4A18.51,18.51,0,0,0,1.55,40.8,17.16,17.16,0,0,0,0,48.09a18.41,18.41,0,0,0,1.33,7.57,14.17,14.17,0,0,0,3.44,4.83,16.35,16.35,0,0,0,4.55,2.95c1.64.7,3.16,1.29,4.56,1.75L24.81,69a21.31,21.31,0,0,1,6.28,3.36H43.68a13.21,13.21,0,0,0-4.15-9.11A29.66,29.66,0,0,0,28.74,57.06Z" />
+            <polygon class="cls-1" points="45.86 0 45.86 1.96 56.65 1.96 56.65 14.51 56.65 16.91 56.65 72.34 68.71 72.34 68.71 16.91 68.71 14.51 68.71 0 45.86 0" />
+            <path class="cls-1" d="M96.36,56.78h43.17a28.62,28.62,0,0,0-2.6-12.89A24.52,24.52,0,0,0,122.15,31a27.79,27.79,0,0,0-20.75,1.34A33.62,33.62,0,0,0,84.65,49.85a30.61,30.61,0,0,0-2.45,12,35.36,35.36,0,0,0,1.51,10.51h13a85,85,0,0,1-.49-9c0-1.5,0-2.73.07-3.71S96.36,57.72,96.36,56.78ZM97.69,46a26.21,26.21,0,0,1,2.73-7.43,14,14,0,0,1,4.91-5.12,14.78,14.78,0,0,1,7.84-1.89,15.47,15.47,0,0,1,5,.78,9,9,0,0,1,3.93,2.58,13,13,0,0,1,2.52,4.91,28.24,28.24,0,0,1,.91,7.85v3.51a26.93,26.93,0,0,1-.28,3.64H96.5A57,57,0,0,1,97.69,46Z" />
+            <path class="cls-1" d="M189.19,35.55a18.66,18.66,0,0,0-7-4.35,31.38,31.38,0,0,0-10.79-1.61,32.44,32.44,0,0,0-9.46,1.26,20.48,20.48,0,0,0-6.87,3.44,14.87,14.87,0,0,0-4.13,5,12.94,12.94,0,0,0-1.41,5.89,7.64,7.64,0,0,0,1.13,4.34c.74,1.13,2.66,1.69,5.74,1.69a5.69,5.69,0,0,0,4.07-1.33,4.39,4.39,0,0,0,1.4-3.3,21.23,21.23,0,0,0-.42-3.43,26.25,26.25,0,0,1-.42-4.7,5.52,5.52,0,0,1,3-5.26,16.17,16.17,0,0,1,7.64-1.61,13.37,13.37,0,0,1,5.61,1,7.09,7.09,0,0,1,3.22,2.87A12.92,12.92,0,0,1,182.05,40a40.44,40.44,0,0,1,.41,6,27.89,27.89,0,0,1-.63,6.66,8.38,8.38,0,0,1-2.31,4.06,13.34,13.34,0,0,1-4.7,2.73c-2,.75-4.55,1.64-7.64,2.67-2.61.84-5.2,1.64-7.77,2.38a33.84,33.84,0,0,0-7,2.88,14.52,14.52,0,0,0-5.12,4.69c-.06.09-.11.19-.16.28h11.41a11.57,11.57,0,0,1,1.23-2.17,15.27,15.27,0,0,1,6.86-5.12l10.51-4.2c2.9-1.22,4.44-2.43,4.63-3.65h.29v14c0,.36,0,.74,0,1.12H194.1V48.93A23.11,23.11,0,0,0,193,41.71,15.66,15.66,0,0,0,189.19,35.55Z" />
+            <path class="cls-1" d="M240.54,31.55v2h10L222.6,57.62h-1.54V.14H198.21v2H209V72.48h12.06V59.58h1.54l10.61,12.9H248.7L232,52.29l21.87-18.78h8.41v-2Zm-4.3,27.89,10.61,12.9h0l-10.61-12.9Z" />
           </svg>
         </a>
       </footer>
