imprint: update contact data

--- a/rechtliches.html
+++ b/rechtliches.html
@@ -77,21 +77,22 @@
           <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Abschnitt. Anklicken, um Übersicht zu öffnen.">Impressum</h1>
         </header>
-        <p class="article__text">Seite befindet sich im Bau, fehlende Einträge
+        <p class="article__text">Seite befindet sich im Bau, ggf. fehlende
+          Einträge
           werden in wenigen Tagen ergänzt.<br><a href="#datenschutz">Hier
             klicken</a>, um sofort zum <span>Datenschutz</span>
           zu springen.</p>
         <h2 class="article__subtitle">Angaben gemäß §5&nbsp;TMG</h2>
-        <p class="article__text">Marta Musterfrau<br>
-          Stadtstraße 9<br>
+        <p class="article__text">Andreas Teufel<br>
+          An der Karlstadt 8<br>
           27568 Bremerhaven</p>
         <h2 class="article__subtitle">Kontakt</h2>
-        <p class="article__text">Marta Musterfrau<br>
-          0471 / 3654328<br>
-          <a href="mailto:marta@mustefrau.com">marta@musterfrau.com</a></p>
+        <p class="article__text">Andreas Teufel<br>
+          +49 (0) 471 48 23 231<br>
+          <a href="mailto:marta@mustefrau.com">ateufel@hs-bremerhaven.de</a></p>
         <h2 class="article__subtitle">Verantwortlich für Inhalte gemäß
           §55&nbsp;Abs.&nbsp;2&nbsp;RStV</h2>
-        <p class="article__text">Marta Musterfrau, Stadtstraße 9, 27568
+        <p class="article__text">Andreas Teufel, An der Karlstadt 8, 27568
           Bremerhaven</p>
         <h2 class="article__subtitle">Haftungsausschluss</h2>
         <h3 class="article__h3">Haftung für Links</h3>
