fix mail adress in imprint

--- a/rechtliches.html
+++ b/rechtliches.html
@@ -89,7 +89,7 @@
         <h2 class="article__subtitle">Kontakt</h2>
         <p class="article__text">Andreas Teufel<br>
           +49 (0) 471 48 23 231<br>
-          <a href="mailto:marta@mustefrau.com">ateufel@hs-bremerhaven.de</a></p>
+          <a href="mailto:ateufel@hs-bremerhaven.de">ateufel@hs-bremerhaven.de</a></p>
         <h2 class="article__subtitle">Verantwortlich für Inhalte gemäß
           §55&nbsp;Abs.&nbsp;2&nbsp;RStV</h2>
         <p class="article__text">Andreas Teufel, An der Karlstadt 8, 27568
