feat: add stickyfilljs (support position: sticky in IE) + other IE fixes

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     </div>
 
-    <header class="header">
+    <header class="header stickyfill">
       <div class="header__inner">
         <button class="header__hamburger hamburger hamburger--spring js-hamburger"
           type="button">
