--- a/print.html
+++ b/print.html
@@ -61,7 +61,7 @@
       </a>
     </div>
 
-    <header class="header">
+    <header class="header stickyfill">
       <div class="header__inner">
         <button class="header__hamburger hamburger hamburger--spring js-hamburger"
           type="button">
@@ -74,7 +74,7 @@
 
     <main>
       <div class="article article--subpage">
-        <header class="article__number-container article__number-container--subpage">
+        <header class="article__number-container stickyfill article__number-container--subpage">
           <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Abschnitt. Anklicken, um Übersicht zu öffnen.">Printausgabe</h1>
         </header>
