--- a/rechtliches.html
+++ b/rechtliches.html
@@ -60,7 +60,7 @@
       </a>
     </div>
 
-    <header class="header">
+    <header class="header stickyfill">
       <div class="header__inner">
         <button class="header__hamburger hamburger hamburger--spring js-hamburger"
           type="button">
@@ -73,7 +73,7 @@
 
     <main>
       <article class="article article--subpage" id="impressum">
-        <header class="article__number-container article__number-container--subpage">
+        <header class="article__number-container stickyfill article__number-container--subpage">
           <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Abschnitt. Anklicken, um Übersicht zu öffnen.">Impressum</h1>
         </header>
@@ -139,7 +139,7 @@
       </article>
 
       <article class="article article--subpage" id="datenschutz">
-        <header class="article__number-container article__number-container--subpage">
+        <header class="article__number-container stickyfill article__number-container--subpage">
           <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Abschnitt. Anklicken, um Übersicht zu öffnen.">Datenschutz</h1>
         </header>
