--- a/print.html
+++ b/print.html
@@ -79,12 +79,12 @@
           zum Detail sleak konzeptioniert, gestaltet, Papiersorten geprüft und
           alles solange verfeinert, bis wir das fertige Projekt mit bestem
           Gewissen in den Druck geben konnten. Stolz präsentieren wir:</p>
-        <img src="./src/assets/images/sleak-print.png" alt="Schwarzes, edles Cover der Printausgabe von sleak" class="article__image">
+        <img src="./src/assets/images/sleak-print.jpg" alt="Schwarzes, edles Cover der Printausgabe von sleak" class="article__image">
         <h2 class="article__subtitle">sleak, zum Anfassen.</h2>
         <p class="article__text">
            Das 80 Seiten umfassende Heft präsentiert unsere eigens recherchierten und geschriebenen Artikel in einem einzigartigen,
-          modernen Design. Es besticht außerdem besonders durch die auffällige Farbwahl: Das gesamte Magazin ist in schwarz, weiß und rot gehalten.
-          Ein Must-Have für alle Design-Interessierten und Alle, die es noch werden wollen.
+          modernen Design. Es besticht außerdem durch die besondere Farbwahl: Das gesamte Magazin ist in schwarz, weiß und rot gehalten.
+          Ein Must-Have für Design-Interessierte und Alle, die es noch werden wollen.
         </p>
         <img src="./src/assets/images/magazine-opened.jpg" alt="Aufgeschlagene Seiten des Magazins, präsentieren eine schlichte und elegante Artikelgestaltung"
           class="article__image article__image--fullwidth">
@@ -99,7 +99,7 @@
             Stern – Hinter den Kulissen«.</span></p>
         <h2 class="article__subtitle">Jetzt bestellen!</h2>
         <p class="article__text">Um ein Exemplar zu bestellen, schreibe einfach
-          eine kurze Mail an <a href="mailto:example@mail.com">example@mail.com</a>
+          eine kurze Mail an <a href="mailto:redaktion@sleak-mag.design">redaktion@sleak-mag.design</a>
           <span class="article__text--highlighted" style="white-space:nowrap;">–
             we'll get in touch!</span></p>
       </div>
