encrypt mail adress & add default email template

--- a/print.html
+++ b/print.html
@@ -112,7 +112,7 @@
             Stern – Hinter den Kulissen«.</span></p>
         <h2 class="article__subtitle">Jetzt bestellen!</h2>
         <p class="article__text">Um ein Exemplar zu bestellen, schreibe einfach
-          eine kurze Mail an <a href="mailto:redaktion@sleak-mag.design">redaktion@sleak-mag.design</a>
+          eine kurze Mail an <a href="&#109;&#97;&#x69;&#108;&#116;&#111;&#58;&#114;&#x65;&#x64;&#97;&#x6b;&#116;&#x69;&#x6f;&#110;&#x40;&#115;&#108;&#101;&#97;&#107;&#45;&#x6d;&#x61;&#103;&#46;&#x64;&#x65;&#x73;&#105;&#x67;&#110;?subject=Bestellung%20sleak-Magazin&amp;body=Hallo%20Team%20sleak%2C%0A%0Aich%20w%C3%BCrde%20gerne%20eine%20Print%2DVersion%20des%20Magazins%20bestellen%2E%0ABitte%20sendet%20mir%20Informationen%20zu%20Kosten%2C%20Lieferung%20%26%20Zahlungsmethoden%20zu%2E%0A%0AViele%20Gr%C3%BC%C3%9Fe%0A%0A">&#114;&#101;&#x64;&#97;&#x6b;&#x74;&#105;&#x6f;&#x6e;&#64;&#115;&#x6c;&#101;&#97;&#x6b;&#x2d;&#109;&#97;&#x67;&#x2e;&#100;&#101;&#115;&#105;&#103;&#x6e;</a>
           <span class="article__text--highlighted" style="white-space:nowrap;">–
             we'll get in touch!</span></p>
       </div>
