feat: added closing sentence

--- a/index.html
+++ b/index.html
@@ -146,8 +146,13 @@
       <article class="article" data-loaded="false" id="antarktis"></article>
       <article class="article" data-loaded="false" id="ki"></article>
       <article class="article" data-loaded="false" id="bertram"></article>
-
       <footer class="footer">
+        <div>
+          <p class="article__text article__text--highlighted article__text--no-end-marker">
+            Danke fürs Lesen. Wusstest du, das sleak auch als <a href="./print.html">edle
+              Printausgabe</a> erschienen ist?
+          </p>
+        </div>
         <a href="#" class="footer__link" aria-label="Zurück zum Start scrollen">
           <svg class="footer__logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 262.27 72.48"
             preserveAspectRatio="xMidYMid">
