feat: styling & typography updates

--- a/rechtliches.html
+++ b/rechtliches.html
@@ -77,9 +77,7 @@
           <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Abschnitt. Anklicken, um Übersicht zu öffnen.">Impressum</h1>
         </header>
-        <p class="article__text">Seite befindet sich im Bau, ggf. fehlende
-          Einträge
-          werden in wenigen Tagen ergänzt.<br><a href="#datenschutz">Hier
+        <p class="article__text"><a href="#datenschutz">Hier
             klicken</a>, um sofort zum <span>Datenschutz</span>
           zu springen.</p>
         <h2 class="article__subtitle">Angaben gemäß §5&nbsp;TMG</h2>
@@ -148,7 +146,7 @@
           nachfolgenden Beschreibung einverstanden. Die Website kann
           grundsätzlich ohne Registrierung besucht werden. Dabei werden
           folgende Daten ggf. zu statistischen Zwecken auf dem Server,
-          verwaltet von <a href="https://github.com" target="_blank" rel="noopener">GitHub</a>,
+          verwaltet von <a href="https://github.com">GitHub</a>,
           in sogenannten
           "Server Log-Files" gespeichert, ohne dass diese Daten unmittelbar auf
           Ihre Person bezogen werden:</p>
@@ -175,8 +173,7 @@
             <p>Verwendete IP-Adresse</p>
           </li>
         </ul>
-        <p class="article__text">Diese Seite verwendet den Dienst <a href="https://fonts.google.com"
-            target="_blank" rel="noopener">Google
+        <p class="article__text">Diese Seite verwendet den Dienst <a href="https://fonts.google.com">Google
             Fonts</a>, um verschiedene Schriftarten einzubinden. Beim Abrufen
           der Schriftdateien, was bei Seitenaufruf automatisch geschieht,
           können die Daten, die oben aufgelistet sind, auch vom Dienstleister
