fix: hide article end markers on subpages + fix teaser texts

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <article class="article" data-loaded="false" id="bertram"></article>
       <footer class="footer">
         <div>
-          <p class="article__text article__text--highlighted article__text--no-end-marker">
+          <p class="article__text article__text--highlighted">
             Danke fürs Lesen. Wusstest du, das sleak auch als <a href="./print.html">edle
               Printausgabe</a> erschienen ist?
           </p>
