--- a/print.html
+++ b/print.html
@@ -73,7 +73,7 @@
     </header>
 
     <main>
-      <div class="article article--subpage">
+      <div class="article article--subpage article--no-end-marker">
         <header class="article__number-container stickyfill article__number-container--subpage">
           <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Abschnitt. Anklicken, um Übersicht zu öffnen.">Printausgabe</h1>
