--- a/rechtliches.html
+++ b/rechtliches.html
@@ -72,7 +72,7 @@
     </header>
 
     <main>
-      <article class="article article--subpage" id="impressum">
+      <article class="article article--subpage article--no-end-marker" id="impressum">
         <header class="article__number-container stickyfill article__number-container--subpage">
           <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Abschnitt. Anklicken, um Übersicht zu öffnen.">Impressum</h1>
@@ -136,7 +136,7 @@
           werde ich derartige Inhalte umgehend entfernen.</p>
       </article>
 
-      <article class="article article--subpage" id="datenschutz">
+      <article class="article article--subpage article--no-end-marker" id="datenschutz">
         <header class="article__number-container stickyfill article__number-container--subpage">
           <h1 class="article__title article__title--subpage js-article__title--subpage"
             role="button" tabindex="1" aria-label="Abschnitt. Anklicken, um Übersicht zu öffnen.">Datenschutz</h1>
