--- a/index.html
+++ b/index.html
@@ -135,17 +135,17 @@
 
     <main class="main js-main" id="articles">
 
-      <article class="article" data-loaded="false" id="seemann"></article>
-      <article class="article" data-loaded="false" id="graffiti"></article>
-      <article class="article" data-loaded="false" id="apollo"></article>
-      <article class="article" data-loaded="false" id="kunst"></article>
-      <article class="article" data-loaded="false" id="nachbar"></article>
-      <article class="article" data-loaded="false" id="medien"></article>
-      <article class="article" data-loaded="false" id="melanka"></article>
-      <article class="article" data-loaded="false" id="oesterreich"></article>
-      <article class="article" data-loaded="false" id="antarktis"></article>
-      <article class="article" data-loaded="false" id="ki"></article>
-      <article class="article" data-loaded="false" id="bertram"></article>
+      <article class="article" data-loaded="false" id="zwischen-seemannsgarn-und-strandgut"></article>
+      <article class="article" data-loaded="false" id="bringt-farbe-in-die-stadt"></article>
+      <article class="article" data-loaded="false" id="film-ab-bheaven"></article>
+      <article class="article" data-loaded="false" id="kunst-design"></article>
+      <article class="article" data-loaded="false" id="back-to-print"></article>
+      <article class="article" data-loaded="false" id="digitale-medien"></article>
+      <article class="article" data-loaded="false" id="moin-melanka"></article>
+      <article class="article" data-loaded="false" id="oesterreichs-newcomer-mihael-kobas"></article>
+      <article class="article" data-loaded="false" id="projekt-antarktis"></article>
+      <article class="article" data-loaded="false" id="wie-ki-die-designwelt-aendert"></article>
+      <article class="article" data-loaded="false" id="axel-bertram"></article>
       <footer class="footer">
         <div>
           <p class="article__text article__text--highlighted">
