feat: use prettier links without .html extension

--- a/index.html
+++ b/index.html
@@ -115,15 +115,13 @@
             <a href="./" class="menu__item js-menu__item">Magazin</a>
           </li>
           <li class="menu__list-item">
-            <a href="./team.html" class="menu__item js-menu__item">Team</a>
+            <a href="./team" class="menu__item js-menu__item">Team</a>
           </li>
           <li class="menu__list-item">
-            <a href="./print.html" class="menu__item js-menu__item"
-              >Printausgabe</a
-            >
+            <a href="./print" class="menu__item js-menu__item">Printausgabe</a>
           </li>
           <li class="menu__list-item">
-            <a href="./rechtliches.html" class="menu__item js-menu__item"
+            <a href="./rechtliches" class="menu__item js-menu__item"
               >Rechtliches</a
             >
           </li>
@@ -291,7 +289,7 @@
         <div>
           <p class="article__text article__text--highlighted">
             Danke fürs Lesen. Wusstest du, das sleak auch als
-            <a href="./print.html">edle Printausgabe</a> erschienen ist?
+            <a href="./print">edle Printausgabe</a> erschienen ist?
           </p>
         </div>
         <a href="#" class="footer__link" aria-label="Zurück zum Start scrollen">
