--- a/team.html
+++ b/team.html
@@ -106,15 +106,13 @@
             <a href="./" class="menu__item js-menu__item">Magazin</a>
           </li>
           <li class="menu__list-item">
-            <a href="./team.html" class="menu__item js-menu__item">Team</a>
+            <a href="./team" class="menu__item js-menu__item">Team</a>
           </li>
           <li class="menu__list-item">
-            <a href="./print.html" class="menu__item js-menu__item"
-              >Printausgabe</a
-            >
+            <a href="./print" class="menu__item js-menu__item">Printausgabe</a>
           </li>
           <li class="menu__list-item">
-            <a href="./rechtliches.html" class="menu__item js-menu__item"
+            <a href="./rechtliches" class="menu__item js-menu__item"
               >Rechtliches</a
             >
           </li>
